[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/enemy2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/EvasiveEnemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HitArea.gd" type="Script" id=3]
[ext_resource path="res://Scenes/HurtArea.gd" type="Script" id=4]
[ext_resource path="res://Scenes/EntityAnimationTreeRoot.tres" type="AnimationNodeBlendTree" id=5]

[sub_resource type="CircleShape2D" id=2]
radius = 13.0

[sub_resource type="Animation" id=6]
resource_name = "Attack"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Chase"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 2 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 22, 6.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 26, 14 )

[node name="EvasiveEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 6 )
anims/Chase = SubResource( 5 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource( 5 )
anim_player = NodePath("../AnimationPlayer")
parameters/attack/current = 0
parameters/movement/current = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 3 )
damage = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 26, -20 )
shape = SubResource( 7 )

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 1, -13 )
shape = SubResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitArea" to="HitArea" method="_on_HitArea_area_entered"]
[connection signal="hurt" from="HurtArea" to="." method="_on_HurtArea_hurt"]
